align fix

--- a/style.css
+++ b/style.css
@@ -34,10 +34,8 @@ h3 {
 header {
 	margin-bottom: 32px;
 	text-align: center;
-	align-content: flex-start;
 }
 footer {
 	margin-top: 64px;
 	text-align: center;
-	align-items: flex-end;
 }
